# Sofistik

./: .gitignore  README.md  cnode  kfix.py  pyproject.toml  requirements.txt  setup.cfg  sofistik.py  sofui.py  test.py  text_to_image.py
app/: req.txt  sofistik.ui  sofui.py  test.py  test.ui  untitled.py  untitled.ui
db/: CG-Plate.cdb  Test.cdb
designer_app_files/: sofui.py
dlls/: sof_cdb_w_dll.lib  sof_cdb_w_edu_dll.lib
help_files/: sofistik.py
sofistik/: build_image.py  main.py  rectangles.txt  sofi_cat.db  sofistik.db  sofistik.py  sofistik_discover.py  sofui.py  utils.py
sofistik/result/: rectangles.txt
sofistik/sofistik/: settings.py  sofistik_data_objects.py  sofistik_discover.py  utils.py
sofistik/sofistik/database/: commands.py  models.py  sofistik_test.db  utils.py
sofistik/sofistik/database/alembic/: alembic.ini  env.py
sofistik/sofistik/database/alembic/versions/: 390181a3e0f0_create_quads_table.py  91fb76bc8019_create_account_table.py  91fb76bc8019_create_quads_table.py
sofistik/sofistik/sof/: sofistik_daten.py
sofistik/sofistik/sof_windows/: pyqt_windows.py  sofistik_ui.py  windows.py
